--- a/EventManagementSystem/EventManagementSystem.Web/Views/Authorization/UserEdit.cshtml
+++ b/EventManagementSystem/EventManagementSystem.Web/Views/Authorization/UserEdit.cshtml
@@ -51,12 +51,12 @@
                             @Html.PasswordFor(model => model.PasswordConfirmation, new { @class = "form-control", value = Model.User.Password })
                         </div>
                     </div>
-                    <div class="row">
+                    @*<div class="row">
                         <div class="form-group col-md-6">
                             <label>Kayıt Tipi:</label>
                             @Html.EnumDropDownListFor(x => Model.User.UsereType, new { @class = "form-control" })
                         </div>
-                    </div>
+                    </div>*@
                     <div class="form-group kisiselDiv col-md-6">
                         <label>TCKN (Tc Kimlik Numarası):</label>
                         @Html.TextBoxFor(model => model.User.TCKN, new { @class = "form-control" })
@@ -66,16 +66,16 @@
                             <label>Firma Adı:</label>
                             @Html.TextBoxFor(model => model.User.CompanyName, new { @class = "form-control" })
                         </div>
-                        <div class="form-group kurumsalDiv col-md-4">
+                        @*<div class="form-group kurumsalDiv col-md-4">
                             <label>Vergi Dairesi:</label>
                             @Html.TextBoxFor(model => model.User.TaxAdministration, new { @class = "form-control" })
                         </div>
                         <div class="form-group kurumsalDiv col-md-4">
                             <label>Vergi Numarası:</label>
                             @Html.TextBoxFor(model => model.User.TaxNumber, new { @class = "form-control" })
-                        </div>
+                        </div>*@
                     </div>
-                    <div class="row">
+                    @*<div class="row">
                         <div class="form-group col-md-4">
                             <label>Ülke:</label>
                             @Html.DropDownListFor(model => model.SelectedCountryId, new SelectList(Model.CountryGroup, "Id", "Name"), "Ülke", new { @class = "form-control" })
@@ -88,7 +88,7 @@
                             <label>İlçe:</label>
                             @Html.DropDownListFor(model => model.SelectedDistrictId, new SelectList(Model.DistrictGroup, "Id", "Name"), "İlçe", new { @class = "form-control" })
                         </div>
-                    </div>
+                    </div>*@
                     <div class="row">
                         <div class="form-group col-md-12">
                             <label>Adres:</label>
@@ -100,10 +100,10 @@
                             <label>Cep Telefonu:</label>
                             @Html.TextBoxFor(model => model.User.PhoneNumber, new { @class = "form-control", data_format = "+90 ({{999}}) {{999}} {{9999}}" })
                         </div>
-                        <div class="form-group kurumsalDiv col-md-6">
+                        @*<div class="form-group kurumsalDiv col-md-6">
                             <label>Sabit Hat Telefonu:</label>
                             @Html.TextBoxFor(model => model.User.SabitTelNumber, new { @class = "form-control", data_format = "+90 ({{999}}) {{999}} {{9999}}" })
-                        </div>
+                        </div>*@
 
                     </div>
                     <div class="row">
@@ -205,7 +205,7 @@
             return false;
         }
     }
-    var selected = $("#@(Html.IdFor(model => model.User.UsereType))").find("option:selected").val();
+    @*var selected = $("#@(Html.IdFor(model => model.User.UsereType))").find("option:selected").val();
     if (selected == 0) {
 
         $(".kurumsalDiv").css("display", "none");
@@ -273,7 +273,7 @@
                 }
             }
         });
-    });
+    });*@
 </script>
 <script>
     $('form').on('submit', function (e) {
