--- a/EventManagementSystem/EventManagementSystem.Web/Views/_MailTemplate/ForgottenTemplate.cshtml
+++ b/EventManagementSystem/EventManagementSystem.Web/Views/_MailTemplate/ForgottenTemplate.cshtml
@@ -117,7 +117,7 @@
                     <tr>
                         <td align="center" valign="top" style="padding: 40px 10px 40px 10px;">
                             <a href="https://panel.EventManagementSystem.com" target="_blank">
-                                <img alt="İnşaat Hesabı" src="https://panel.EventManagementSystem.com/assets/img/logo_white.png" style="display: block; width: 300px; max-width: 300px; min-width: 40px;  color: #ffffff; font-size: 18px;" border="0">
+                                <img alt="İnşaat Hesabı" src="https://panel.insaathesabi.com/assets/img/logo_white.png" style="display: block; width: 300px; max-width: 300px; min-width: 40px;  color: #ffffff; font-size: 18px;" border="0">
 
                             </a>
                         </td>
