--- a/EventManagementSystem/EventManagementSystem.Web/Views/Account/Register.cshtml
+++ b/EventManagementSystem/EventManagementSystem.Web/Views/Account/Register.cshtml
@@ -19,7 +19,7 @@
 <div class="card card-round card-shadowed px-50 py-30 w-600px mb-0" style="max-width: 100%">
     <img src="/assets/img/logo_login.png" style="width:200px;height:auto;margin: 0 auto;" />
     <br />
-    <h5 class="text" style="text-align: center; font-weight: 600;">İnşaat Hesabı dünyasına girmek için Kayıt formunu doldurun:</h5>
+    <h5 class="text" style="text-align: center; font-weight: 600;">@Model.SiteHeader dünyasına girmek için Kayıt formunu doldurun:</h5>
     <br />
     <div class="text-center login-account-preview" id="AccountPreview">
         <img id="Photo" class="avatar avatar-xxl" style="border-width: 2px;border-color: #ccc;border-style: solid;" src="~/assets/img/avatar/avatar_profile.jpg">
