--- a/EventManagementSystem/EventManagementSystem.Web/Views/Account/Login.cshtml
+++ b/EventManagementSystem/EventManagementSystem.Web/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card card-round card-shadowed px-50 py-30 w-400px mb-0" style="max-width: 100%">
-    <img src="/assets/img/logo_login.png" style="width:80%;height:auto;margin: 0 auto;" />
+    <strong style="text-align: center;font-size: 27px;">@Model.SiteHeader</strong>
     <br />
     <div class="text-center login-account-preview" id="AccountPreview">
         <img id="Photo" class="avatar avatar-xxl" style="border-width: 2px;border-color: #ccc;border-style: solid;" src="~/assets/img/avatar/avatar_profile.jpg">
