--- a/EventManagementSystem/EventManagementSystem.Web/Views/Home/Sidebar.cshtml
+++ b/EventManagementSystem/EventManagementSystem.Web/Views/Home/Sidebar.cshtml
@@ -8,17 +8,11 @@
    
 }
 <header class="sidebar-header" style="background-color: #fa9c28;">
-    <a class="logo-icon" href="/"><img src="/assets/img/logo_EventManagementSystem.png" alt="logo icon"></a>
 
     <span class="logo">
-        @*<a href="/">@Model.SiteTitle</a>*@
-        <a href="/"><img src="~/Assets/img/logo_right_white.png" style="width:95%;" /></a>
+        <a href="/">@Model.SiteTitle</a>
 
     </span>
-
-    @*<span class="logo">
-            <a href="/"><img src="/assets/img/ytb-text.png" alt="logo"></a>
-        </span>*@
     <span class="sidebar-toggle-fold"></span>
 </header>
 <nav class="sidebar-navigation">
