--- a/EventManagementSystem.Web/Views/Home/Footer.cshtml
+++ b/EventManagementSystem.Web/Views/Home/Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
     <div class="col-md-6">
-        <p class="text-center text-md-left">© 2018 | Apphic Limited | <a href="http://www.apphic.com">Apphic Limited</a>. Tüm Hakları Saklıdır.</p>
+        <p class="text-center text-md-left">© @(DateTime.Now.Year) | Software Duty Limited | <a href="https://www.softwareduty.com" target="_blank">Software Duty Limited</a>. All Rights Reserved.</p>
     </div>
 </div>
